<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>scoresPongMenuClass</class>
 <widget class="QWidget" name="scoresPongMenuClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>654</width>
    <height>400</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QTableWidget" name="tableWidget_Parcours">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>160</y>
     <width>571</width>
     <height>211</height>
    </rect>
   </property>
   <property name="editTriggers">
    <set>QAbstractItemView::NoEditTriggers</set>
   </property>
   <column>
    <property name="text">
     <string>Pseudo</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Scores</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Nom Parcours</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Date</string>
    </property>
   </column>
  </widget>
  <widget class="QLabel" name="label_Titre">
   <property name="geometry">
    <rect>
     <x>120</x>
     <y>50</y>
     <width>381</width>
     <height>71</height>
    </rect>
   </property>
   <property name="text">
    <string>Scores Pong</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_Back">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>Retour</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_Perso">
   <property name="geometry">
    <rect>
     <x>530</x>
     <y>20</y>
     <width>101</width>
     <height>41</height>
    </rect>
   </property>
   <property name="text">
    <string>Scores Perso</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
